rust/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multi_fact_count_distinct_control.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
customers__city | orders__count | orders__unique_customers | returns__count | returns__unique_customers
----------------+---------------+--------------------------+----------------+--------------------------
Boston          | 2             | 1                        | 2              | 1                        
Chicago         | 0             | 0                        | 2              | 1                        
New York        | 4             | 2                        | 1              | 1
