rust/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multi_fact_counts_by_customer_name.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
customers__name | orders__count | returns__count
----------------+---------------+---------------
Alice           | 3             | 1             
Bob             | 2             | 2             
Charlie         | 0             | 2             
Diana           | 1             | 0
