rust/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multi_fact_grouped_by_city.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
customers__city | orders__count | returns__count
----------------+---------------+---------------
Boston          | 2             | 2             
Chicago         | 0             | 2             
New York        | 4             | 1
