rust/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multi_fact_sums_by_customer_name.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
customers__name | orders__total_amount | returns__total_refund
----------------+----------------------+----------------------
Alice           | 350.00               | 100.00               
Bob             | 400.00               | 130.00               
Charlie         | NULL                 | 100.00               
Diana           | 400.00               | NULL
