rust/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multi_fact_three_fact_tables.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
customers__name | orders__count | returns__count | reviews__count
----------------+---------------+----------------+---------------
Alice           | 3             | 1              | 2             
Bob             | 2             | 2              | 0             
Charlie         | 0             | 2              | 1             
Diana           | 1             | 0              | 1
