rust/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multiplied_with_time_and_daterange.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
customers__name | orders__created_at_day | orders__count | returns__count
----------------+------------------------+---------------+---------------
Alice           | 2025-03-01 00:00:00    | 1             | 1             
Alice           | 2025-03-02 00:00:00    | 1             | 1             
Alice           | 2025-03-03 00:00:00    | 1             | 1             
Bob             | 2025-03-04 00:00:00    | 1             | 2             
Bob             | 2025-03-05 00:00:00    | 1             | 2
